# kdevelop

debuggers/gdb/: CMakeLists.txt  breakpointcontroller.cpp  debuggerplugin.cpp  debuggerplugin.h  debugjob.cpp  debugsession.cpp  debugsession.h  disassemblewidget.cpp  disassemblewidget.h  gdb.cpp  gdb.h  gdbcommand.cpp  gdbcommand.h  gdbcommandqueue.cpp  gdbcommandqueue.h  gdbframestackmodel.cpp  gdblaunchconfig.cpp  memviewdlg.cpp  variablecontroller.cpp
debuggers/gdb/ksysguard/: ProcessModel.cpp  ProcessModel_p.h  ReniceDlg.cpp  ksysguardprocesslist.cpp
debuggers/gdb/unittests/: gdbtest.cpp
languages/cpp/codegen/: makeimplementationprivate.h
